force-app/main/default/objects/Job_Applicant__c/fields/Job_Applicant_Recruiter_User_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Applicant_Recruiter_User_Title__c</fullName>
    <formula>Job_Applicant_Recruiter__r.Title</formula>
    <label>Job Applicant Recruiter User Title</label>
    <type>Text</type>
</CustomField>