force-app/main/default/objects/Job_Applicant__c/fields/Job_Applicant_Scoring__c.field-meta.xml
<CustomField>
    <fullName>Job_Applicant_Scoring__c</fullName>
    <label>Job Applicant Scoring</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>