force-app/main/default/objects/Job_Applicant__c/fields/Job_Applicant_Strength__c.field-meta.xml
<CustomField>
    <fullName>Job_Applicant_Strength__c</fullName>
    <label>Job Applicant Strength</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>