force-app/main/default/objects/Job_Applicant__c/fields/Job_Applicant_URL__c.field-meta.xml
<CustomField>
    <fullName>Job_Applicant_URL__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_300, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_300))&amp; Id</formula>
    <label>Job Applicant URL</label>
    <type>Text</type>
</CustomField>