force-app/main/default/objects/Job_Applicant__c/fields/Job_City__c.field-meta.xml
<CustomField>
    <fullName>Job_City__c</fullName>
    <formula>Job__r.City__c</formula>
    <label>Job City</label>
    <type>Text</type>
</CustomField>