force-app/main/default/objects/Job_Applicant__c/fields/Job_Closed__c.field-meta.xml
<CustomField>
    <fullName>Job_Closed__c</fullName>
    <formula>Job__r.Closed__c</formula>
    <label>Job Closed</label>
    <type>Checkbox</type>
</CustomField>