force-app/main/default/objects/Job_Applicant__c/fields/Job_Deal_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Job_Deal_Sheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Deal Sheet</label>
    <referenceTo>Deal_Sheet__c</referenceTo>
    <relationshipLabel>Job Applicants</relationshipLabel>
    <relationshipName>Job_Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>