force-app/main/default/objects/Job_Applicant__c/fields/Job_Num__c.field-meta.xml
<CustomField>
    <fullName>Job_Num__c</fullName>
    <label>Job Num</label>
    <length>255</length>
    <type>Text</type>
</CustomField>