force-app/main/default/objects/Job_Applicant__c/fields/Job_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Job_Postal_Code__c</fullName>
    <formula>Job__r.Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Postal Code</label>
    <type>Text</type>
</CustomField>