force-app/main/default/objects/Job_Applicant__c/fields/Job_Recruiter_Email__c.field-meta.xml
<CustomField>
    <fullName>Job_Recruiter_Email__c</fullName>
    <label>Job Recruiter Email</label>
    <type>Email</type>
</CustomField>