force-app/main/default/objects/Job_Applicant__c/fields/Job_Search__c.field-meta.xml
<CustomField>
    <fullName>Job_Search__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Search</label>
    <referenceTo>Job_Search__c</referenceTo>
    <relationshipLabel>Job Applicants</relationshipLabel>
    <relationshipName>Job_Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>