force-app/main/default/objects/Job_Applicant__c/fields/Job_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Job_Specialty__c</fullName>
    <formula>TEXT(Job__r.Specialty__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Specialty</label>
    <type>Text</type>
</CustomField>