force-app/main/default/objects/Job_Applicant__c/fields/Job_Stage1__c.field-meta.xml
<CustomField>
    <fullName>Job_Stage1__c</fullName>
    <formula>TEXT(Job__r.Stage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Stage</label>
    <type>Text</type>
</CustomField>