force-app/main/default/objects/Job_Applicant__c/fields/Job_Stage__c.field-meta.xml
<CustomField>
    <fullName>Job_Stage__c</fullName>
    <label>Job Stage</label>
    <length>200</length>
    <type>Text</type>
</CustomField>