force-app/main/default/objects/Job_Applicant__c/fields/Job_State__c.field-meta.xml
<CustomField>
    <fullName>Job_State__c</fullName>
    <formula>TEXT(Job__r.State__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job State</label>
    <type>Text</type>
</CustomField>