force-app/main/default/objects/Job_Applicant__c/fields/Job_VMS_ID__c.field-meta.xml
<CustomField>
    <fullName>Job_VMS_ID__c</fullName>
    <formula>Job__r.VMS_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job VMS ID</label>
    <type>Text</type>
</CustomField>