force-app/main/default/objects/Job_Applicant__c/fields/Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity__c</fullName>
    <label>Last Activity</label>
    <type>TextArea</type>
</CustomField>