force-app/main/default/objects/Job_Applicant__c/fields/Last_Client_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Client_Submission_Date__c</fullName>
    <label>Last Client Submission</label>
    <type>Date</type>
</CustomField>