force-app/main/default/objects/Job_Applicant__c/fields/Marketing_Lead__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Lead</label>
    <type>Checkbox</type>
</CustomField>