force-app/main/default/objects/Job_Applicant__c/fields/New_Applicant__c.field-meta.xml
<CustomField>
    <fullName>New_Applicant__c</fullName>
    <formula>IF( TEXT(Type__c) =&quot;Online&quot;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Applicant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>