force-app/main/default/objects/Job_Applicant__c/fields/Notice_Required_On_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Notice_Required_On_Acceptance__c</fullName>
    <label>Notice Required On Acceptance</label>
    <type>TextArea</type>
</CustomField>