force-app/main/default/objects/Job_Applicant__c/fields/Onboarding_Package__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Package__c</fullName>
    <formula>Account__r.Onboarding_Package__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboarding Package</label>
    <type>Text</type>
</CustomField>