force-app/main/default/objects/Job_Applicant__c/fields/Open_For_Relocation__c.field-meta.xml
<CustomField>
    <fullName>Open_For_Relocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open For Relocation</label>
    <type>Checkbox</type>
</CustomField>