force-app/main/default/objects/Job_Applicant__c/fields/Open_Job_Count__c.field-meta.xml
<CustomField>
    <fullName>Open_Job_Count__c</fullName>
    <formula>Account__r.Open_Job_Cnt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Job Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>