force-app/main/default/objects/Job_Applicant__c/fields/Pay_Package_Responded__c.field-meta.xml
<CustomField>
    <fullName>Pay_Package_Responded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pay Package Responded</label>
    <type>Checkbox</type>
</CustomField>