force-app/main/default/objects/Job_Applicant__c/fields/Pay_Package_Response__c.field-meta.xml
<CustomField>
    <fullName>Pay_Package_Response__c</fullName>
    <label>Pay Package Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>