force-app/main/default/objects/Job_Applicant__c/fields/Pay_Package_Sent_By__c.field-meta.xml
<CustomField>
    <fullName>Pay_Package_Sent_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pay Package Sent By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Applicants8</relationshipName>
    <type>Lookup</type>
</CustomField>