force-app/main/default/objects/Job_Applicant__c/fields/Pay_Package_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Pay_Package_Sent_Date__c</fullName>
    <label>Pay Package Sent Date</label>
    <type>Date</type>
</CustomField>