force-app/main/default/objects/Job_Applicant__c/fields/PCR_Current_Status__c.field-meta.xml
<CustomField>
    <fullName>PCR_Current_Status__c</fullName>
    <label>PCR Current Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>