force-app/main/default/objects/Job_Applicant__c/fields/Percentage_of_Travel__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_Travel__c</fullName>
    <label>Percentage of Travel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>