force-app/main/default/objects/Job_Applicant__c/fields/Perm_Nursing_Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Perm_Nursing_Recruiter__c</fullName>
    <label>Perm Nursing Recruiter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>