force-app/main/default/objects/Job_Applicant__c/fields/Placement_Cnt__c.field-meta.xml
<CustomField>
    <fullName>Placement_Cnt__c</fullName>
    <formula>if( Placement_Date__c &gt; DATE(1900,01,01), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Placement Cnt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>