force-app/main/default/objects/Job_Applicant__c/fields/Placement_Date__c.field-meta.xml
<CustomField>
    <fullName>Placement_Date__c</fullName>
    <label>Placement Date</label>
    <type>Date</type>
</CustomField>