force-app/main/default/objects/Job_Applicant__c/fields/Post_to_Chatter_on_Stage_Out__c.field-meta.xml
<CustomField>
    <fullName>Post_to_Chatter_on_Stage_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post to Chatter on Stage Out</label>
    <type>Checkbox</type>
</CustomField>