force-app/main/default/objects/Job_Applicant__c/fields/Prescreened__c.field-meta.xml
<CustomField>
    <fullName>Prescreened__c</fullName>
    <formula>IF(NOT(ISBLANK(Candidate__r.Prescreen_Completed__c)), TRUE, FALSE)</formula>
    <label>Prescreened</label>
    <type>Checkbox</type>
</CustomField>