force-app/main/default/objects/Job_Applicant__c/fields/Professional_Discipline__c.field-meta.xml
<CustomField>
    <fullName>Professional_Discipline__c</fullName>
    <formula>TEXT(Job__r.Professional_Discipline__c)</formula>
    <label>Professional Discipline</label>
    <type>Text</type>
</CustomField>