force-app/main/default/objects/Job_Applicant__c/fields/Questionnaire_Pass_Score__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Pass_Score__c</fullName>
    <label>Questionnaire Pass Score</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>