force-app/main/default/objects/Job_Applicant__c/fields/Questionnaire_Pass_Status__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire_Pass_Status__c</fullName>
    <label>Questionnaire Pass Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>