force-app/main/default/objects/Job_Applicant__c/fields/RA_Lead_Sent__c.field-meta.xml
<CustomField>
    <fullName>RA_Lead_Sent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RA Lead Sent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_ApplicantsRjYV</relationshipName>
    <type>Lookup</type>
</CustomField>