force-app/main/default/objects/Job_Applicant__c/fields/RA_Presentation__c.field-meta.xml
<CustomField>
    <fullName>RA_Presentation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RA Presentation</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_ApplicantsRlRw</relationshipName>
    <type>Lookup</type>
</CustomField>