force-app/main/default/objects/Job_Applicant__c/fields/RA_Sense__c.field-meta.xml
<CustomField>
    <fullName>RA_Sense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RA (Sense)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Applicants9</relationshipName>
    <type>Lookup</type>
</CustomField>