force-app/main/default/objects/Job_Applicant__c/fields/Rank_Other_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Rank_Other_Opportunities__c</fullName>
    <label>Rank Other Opportunities</label>
    <length>60</length>
    <type>Text</type>
</CustomField>