force-app/main/default/objects/Job_Applicant__c/fields/Receive_Mentorship__c.field-meta.xml
<CustomField>
    <fullName>Receive_Mentorship__c</fullName>
    <label>Receive Mentorship</label>
    <length>60</length>
    <type>Text</type>
</CustomField>