force-app/main/default/objects/Job_Applicant__c/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <label>Recommendation</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>