force-app/main/default/objects/Job_Applicant__c/fields/Recruiter_Updated_By_Mgmt__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Updated_By_Mgmt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recruiter Updated By Mgmt</label>
    <type>Checkbox</type>
</CustomField>