force-app/main/default/objects/Job_Applicant__c/fields/refreshed__c.field-meta.xml
<CustomField>
    <fullName>refreshed__c</fullName>
    <label>refreshed</label>
    <length>1</length>
    <type>Text</type>
</CustomField>