force-app/main/default/objects/Job_Applicant__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
            <value>
                <fullName>Over Budget</fullName>
            </value>
            <value>
                <fullName>Client Declined</fullName>
            </value>
            <value>
                <fullName>Candidate Declined</fullName>
            </value>
            <value>
                <fullName>Ghosted</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>