force-app/main/default/objects/Job_Applicant__c/fields/Requested_Time_Off__c.field-meta.xml
<CustomField>
    <fullName>Requested_Time_Off__c</fullName>
    <label>Requested Time Off</label>
    <length>255</length>
    <type>Text</type>
</CustomField>