force-app/main/default/objects/Job_Applicant__c/fields/Resubmit_Backoffice_Approval__c.field-meta.xml
<CustomField>
    <fullName>Resubmit_Backoffice_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resubmit Backoffice Approval</label>
    <type>Checkbox</type>
</CustomField>