force-app/main/default/objects/Job_Applicant__c/fields/Resume_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Resume_Received_Date__c</fullName>
    <label>Resume Received Date</label>
    <type>Date</type>
</CustomField>