force-app/main/default/objects/Job_Applicant__c/fields/Rollback_Approved__c.field-meta.xml
<CustomField>
    <fullName>Rollback_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rollback_Approved</label>
    <type>Checkbox</type>
</CustomField>