force-app/main/default/objects/Job_Applicant__c/fields/Rolled_Back__c.field-meta.xml
<CustomField>
    <fullName>Rolled_Back__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rolled Back</label>
    <type>Checkbox</type>
</CustomField>