force-app/main/default/objects/Job_Applicant__c/fields/Salary_Requirements_Met__c.field-meta.xml
<CustomField>
    <fullName>Salary_Requirements_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salary Requirements Met</label>
    <type>Checkbox</type>
</CustomField>