force-app/main/default/objects/Job_Applicant__c/fields/Search_By__c.field-meta.xml
<CustomField>
    <fullName>Search_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Search By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_ApplicantsPBF9</relationshipName>
    <type>Lookup</type>
</CustomField>