force-app/main/default/objects/Job_Applicant__c/fields/Search_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Search_Criteria__c</fullName>
    <label>Search Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>