force-app/main/default/objects/Job_Applicant__c/fields/Search_Criteria_old__c.field-meta.xml
<CustomField>
    <fullName>Search_Criteria_old__c</fullName>
    <label>Search Criteria old</label>
    <type>TextArea</type>
</CustomField>