force-app/main/default/objects/Job_Applicant__c/fields/Search_Date__c.field-meta.xml
<CustomField>
    <fullName>Search_Date__c</fullName>
    <label>Search Date</label>
    <type>DateTime</type>
</CustomField>