force-app/main/default/objects/Job_Applicant__c/fields/Search_Name__c.field-meta.xml
<CustomField>
    <fullName>Search_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Search Name</label>
    <referenceTo>Candidate_Search__c</referenceTo>
    <relationshipLabel>Job Applicants</relationshipLabel>
    <relationshipName>Job_Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>