force-app/main/default/objects/Job_Applicant__c/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <formula>Candidate__r.SSN__c</formula>
    <label>SSN</label>
    <type>Text</type>
</CustomField>