force-app/main/default/objects/Job_Applicant__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Application</fullName>
            </value>
            <value>
                <fullName>Reapplied By Candidate</fullName>
            </value>
            <value>
                <fullName>Auto Matched</fullName>
            </value>
            <value>
                <fullName>Recruiter Matched</fullName>
            </value>
            <value>
                <fullName>Call Back</fullName>
            </value>
            <value>
                <fullName>RA Presentation</fullName>
            </value>
            <value>
                <fullName>References</fullName>
            </value>
            <value>
                <fullName>Waiting to Submit</fullName>
            </value>
            <value>
                <fullName>Internal Submission</fullName>
            </value>
            <value>
                <fullName>Client Submission</fullName>
            </value>
            <value>
                <fullName>Pre-Credentialing</fullName>
            </value>
            <value>
                <fullName>Telephone</fullName>
            </value>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>Offer</fullName>
            </value>
            <value>
                <fullName>Placement</fullName>
            </value>
            <value>
                <fullName>Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>