force-app/main/default/objects/Job_Applicant__c/fields/Submission_Count__c.field-meta.xml
<CustomField>
    <fullName>Submission_Count__c</fullName>
    <label>Submission Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>