force-app/main/default/objects/Job_Applicant__c/fields/Talent_Plus_Assessment_URL__c.field-meta.xml
<CustomField>
    <fullName>Talent_Plus_Assessment_URL__c</fullName>
    <label>Talent Plus Assessment URL</label>
    <type>Url</type>
</CustomField>