force-app/main/default/objects/Job_Applicant__c/fields/TEL_Appointment__c.field-meta.xml
<CustomField>
    <fullName>TEL_Appointment__c</fullName>
    <label>TEL Appointment</label>
    <type>DateTime</type>
</CustomField>