force-app/main/default/objects/Job_Applicant__c/fields/Telephone_Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>Telephone_Interview_Date__c</fullName>
    <label>Telephone Interview Date</label>
    <type>Date</type>
</CustomField>