force-app/main/default/objects/Job_Applicant__c/fields/Temp_Nursing_Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Temp_Nursing_Recruiter__c</fullName>
    <formula>Account__r.Biz_Dev_Temp_Nursing__r.FirstName +&quot; &quot; + Account__r.Biz_Dev_Temp_Nursing__r.LastName</formula>
    <label>Temp Nursing Recruiter</label>
    <type>Text</type>
</CustomField>