force-app/main/default/objects/Job_Applicant__c/fields/Title_of_Interviewing_Manager__c.field-meta.xml
<CustomField>
    <fullName>Title_of_Interviewing_Manager__c</fullName>
    <label>Title of Interviewing Manager</label>
    <length>60</length>
    <type>Text</type>
</CustomField>