force-app/main/default/objects/Job_Applicant__c/fields/Veteran_Status__c.field-meta.xml
<CustomField>
    <fullName>Veteran_Status__c</fullName>
    <label>Veteran Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>