force-app/main/default/objects/Job_Applicant__c/fields/Waiting_to_Submit_Reason__c.field-meta.xml
<CustomField>
    <fullName>Waiting_to_Submit_Reason__c</fullName>
    <label>Waiting to Submit Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>