force-app/main/default/objects/Job_Applicant__c/fields/Where_Interviewing__c.field-meta.xml
<CustomField>
    <fullName>Where_Interviewing__c</fullName>
    <label>Where Interviewing</label>
    <length>60</length>
    <type>Text</type>
</CustomField>