force-app/main/default/objects/Job_Applicant__c/fields/Work_Details__c.field-meta.xml
<CustomField>
    <fullName>Work_Details__c</fullName>
    <label>Work Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>