force-app/main/default/objects/Job_Applicant__c/recordTypes/Corporate_Job_Applicant.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Job_Applicant</fullName>
    <active>true</active>
    <label>Corporate Job Applicant</label>
</RecordType>