force-app/main/default/objects/Job_Applicant__c/recordTypes/Staffing_Job_Applicant.recordType-meta.xml
<RecordType>
    <fullName>Staffing_Job_Applicant</fullName>
    <active>true</active>
    <label>Staffing Job Applicant</label>
</RecordType>