force-app/main/default/objects/Job_Applicant__c/validationRules/Fill_Telephone_appointment_dates.validationRule-meta.xml
<ValidationRule>
    <fullName>Fill_Telephone_appointment_dates</fullName>
    <active>true</active>
    <description>When the Stage field is changed to “Phone Interview” and the Telephone Appointment field is blank. Displays validation message</description>
    <errorConditionFormula>/* Moving INTO Telephone stage, appointment must be set */
AND(
ISCHANGED(Stage__c),
ISPICKVAL(Stage__c, &quot;Phone Interview&quot;),
ISBLANK(TEL_Appointment__c)
)</errorConditionFormula>
    <errorMessage>Please Fill out &quot;TEL Appointment&quot; field if stage is Telephone</errorMessage>
</ValidationRule>